an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
11/24/2025:
[+] Fixed the "Click Anywhere to Launch" not launching. Woops.

11/23/2025:
[+] Added Pizza Tower (Thanks for the suggestion BubbaNator5000 and Tanter!)

11/22/2025:
[+] Fixed Legend of Zelda: Ocarina of Time (Thanks for the bug reports
James, colinisaweiner, and ThatOneAmerican)
[+] Added Minesweeper (Thanks for the suggestion!)
[+] Added Pokémon Green (Thanks for the suggestion BIG_B!)
[+] Added Super Metroid (Thanks for the suggestion Adon!)
[+] Added Wheely 1-8 (Thanks for the suggestion Koda!)
[+] Added Yo-Kai Watch (Thanks for the suggestion M.h)
[+] Fixed Run 'n' Gun having a gun image. I assumed this was a gun game and
not a football game, sorry, lol. It's now under the 'Sports' category
[+] Added Jacksmith (Thanks for the suggestion Mason Perez and "Sorry
Martello & Kicole Nartchner")

11/16/2025:
[+] Added an A.I. assistant
[+] Added Crazy Cattle 3D

11/15/2025:
[+] Added Cluster Rush (Thanks for the suggestion!)
[+] Added People Playground (Thanks for the suggestion!)
[+] Added Super Mario World (Thanks for the suggestion!)
[+] Added Steal a Brainrot (Thanks for the suggestion Hudsyn!)
[+] Added Asteroids (Thanks for the suggestion Jacob!)
[+] Added Lego Batman: The Video Game (Thanks for the suggestion!)
[+] Added The Legend of Zelda: A Link to the Past (Thanks for the
suggestion colin_is_a_weiner2610)
[+] Added The Legend of Zelda: Ocarina of Time (Thanks for the suggestion
colin_is_a_weiner2610)
[+] Added Tanuki Sunset (Thanks for the suggestion Sophia)

11/13/2025:
[+] Added Hollow Knight (Thanks for the suggestion Hudsyn ganey)

11/12/2025: